--- a/readme.html
+++ b/readme.html
@@ -1,4 +1,4 @@
-<h1>Carpeta base con todos los archivos suministrados por WordPress</h1>
+Carpeta base con todos los archivos suministrados por WordPress
 <h2>Proyecto final, para que puedas seguir practicando </h2>
 <br>
 <h2>Al descargar este proyecto, debes efectuar los siguientes pasos:</h2>
