--- a/readme.html
+++ b/readme.html
@@ -1,11 +1,11 @@
 Carpeta base con todos los archivos suministrados por WordPress
-<h2>Proyecto final, para que puedas seguir practicando </h2>
-<br>
-<h2>Al descargar este proyecto, debes efectuar los siguientes pasos:</h2>
-<ol>
-  <li>Descomprimir la carpeta</li>
-  <li>Guardar la carpeta en tu PC, en el disco duro C:/ dentro de la carpeta XAMPP/HTDOCS</li>
-</ol>
+Proyecto final, para que puedas seguir practicando 
+
+Al descargar este proyecto, debes efectuar los siguientes pasos:
+
+Descomprimir la carpeta
+Guardar la carpeta en tu PC, en el disco duro C:/ dentro de la carpeta XAMPP/HTDOCS
+
 
 Ten pendiente estas instrucciones, para que puedas ingresar y administrar WordPress en tu PC de forma local:
 En la carpeta del proyecto ingresa a la subcarpeta:  ( bd )
@@ -22,20 +22,3 @@ http://localhost/youtube-proyecto/wp-admin/
 
 Usuario: cedaviluwebacademy
 Contraseña: youtubecedavilu2024	
-<h2 style="text-align:center">Si quieres ir desde 0 a 100 en el <strong>Desarrollo Web FullStack</strong> - (Front-End y Back-End): Aquí te dejo una ruta que te prepare:</h2>
-<table>
-  <tr>
-    <td>
-      <a href="https://cedavilu.com/curso-desarrollo-web-detalle.html" target="_blank"> <img src="https://cedavilu.com/assets/img/cursos/cursos-1.png" > </a>      
-    </td>
-    <td>
-       <a href="https://cedavilu.com/curso-javascript-detalle.html" target="_blank"><img style="width:25" src="https://cedavilu.com/assets/img/cursos/cursos-2.png" ></a>      
-    </td>
-    <td>
-      <a href= "https://cedavilu.com/curso-javascript-avanzado-detalle.html" target="_blank"><img style="width:25" src="https://cedavilu.com/assets/img/cursos/cursos-3.png" ></a>
-    </td>
-    <td>
-    <a href="https://cedavilu.com/curso-nodejs-detalle.html" target="_blank"> <img style="width:25" src="https://cedavilu.com/assets/img/cursos/cursos-4.png" ></a>
-    </td>
-  </tr>
-</table>
